# visual_odom

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  plotTimes.py
configurations/: easylogging.conf  kitti00-02.yaml  kitti00.yaml  kitti03.yaml  kitti04-10.yaml  zed.yaml
src/: bucket.cpp  bucket.h  feature.cpp  feature.h  featureset.h  frame.cpp  frame.h  gtsamOptimizer.cpp  gtsamOptimizer.h  keyframe.cpp  keyframe.h  loadFunctions.cpp  loadFunctions.h  loopDetector.cpp  loopDetector.h  main.cpp  mapDrawer.cpp  mapDrawer.h  matrixutils.h  orbExtractor.cpp  orbExtractor.h  oxts.h  stereocamera.h  system.cpp  system.h  utils.cpp  utils.h  visualOdometry.cpp  visualOdometry.h  visualOdometryStereo.cpp  visualOdometryStereo.h
src/evaluate/: evaluate_odometry.cpp  evaluate_odometry.h
src/legacy/evaluate/: evaluate_odometry.cpp  evaluate_odometry.h
